--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -349,5 +349,98 @@
   "relative_time_in_hours": "en {count} horas",
   "relative_time_hours_ago": "hace {count} horas",
   "relative_time_in_days": "en {count} días",
-  "relative_time_days_ago": "hace {count} días"
+  "relative_time_days_ago": "hace {count} días",
+
+  "_comment_missing_ui_elements": "=== TRADUCCIONES DE ELEMENTOS UI FALTANTES ===",
+  
+  "import_csv_menu": "Importar CSV...",
+  "exit": "Salir",
+  "test_outlook_connection": "Probar Conexión de Outlook",
+  "whatsapp_business_api_settings": "Configuraciones WhatsApp Business API...",
+  "whatsapp_web_settings": "Configuraciones WhatsApp Web...",
+  "test_whatsapp_business_api": "Probar WhatsApp Business API",
+  "test_whatsapp_web_service": "Probar Servicio WhatsApp Web",
+  "about": "Acerca de",
+  "stop_sending": "Detener Envío",
+  "outlook_not_connected": "Outlook: No Conectado",
+  "select_all": "Seleccionar Todo",
+  "select_none": "No Seleccionar Nada",
+  "email_content_group": "Contenido del Email",
+  "whatsapp_content_group": "Contenido WhatsApp",
+  "whatsapp_message_label": "Mensaje WhatsApp:",
+  "whatsapp_placeholder": "Ingrese el contenido del mensaje de WhatsApp (deje vacío para usar el contenido del email)",
+  "characters_count": "Caracteres: {count}/4096",
+  "sending_progress": "Progreso de Envío",
+  "ready_to_send": "Listo para enviar",
+  "email_ready_status": "Email: Listo",
+  "whatsapp_business_not_configured_status": "WhatsApp Business: No configurado",
+  "whatsapp_web_not_configured_status": "WhatsApp Web: No configurado",
+  "quota_status": "Cuota: {current}/{total}",
+  "invalid_csv_file": "Archivo CSV Inválido",
+  "csv_file_not_valid": "El archivo seleccionado no es válido:",
+  "import_csv_file": "Importar Archivo CSV",
+  "csv_files": "Archivos CSV (*.csv)",
+  "text_files": "Archivos de Texto (*.txt)",
+  "all_files": "Todos los Archivos (*)",
+  "outlook_connection_error": "Error de Conexión de Outlook",
+  "outlook_connection_failed": "Error al conectar con Outlook:\n{error}\n\nPor favor asegúrese de que Microsoft Outlook esté instalado e intente nuevamente.",
+  "success": "Éxito",
+  "error": "Error",
+  "template_imported_successfully": "Plantilla '{name}' importada exitosamente.",
+  "failed_to_import_template": "Error al importar plantilla.",
+  "import_template": "Importar Plantilla",
+  "json_files": "Archivos JSON (*.json)",
+  "export_all_templates": "Exportar Todas las Plantillas",
+  "all_templates_exported": "Todas las plantillas exportadas a {filename}",
+  "failed_to_export_templates": "Error al exportar plantillas.",
+  "whatsapp_business_not_configured": "WhatsApp Business API No Configurado",
+  "whatsapp_business_configure_first": "Por favor configure las configuraciones de WhatsApp Business API primero.\n\nVaya a Herramientas → Configuraciones WhatsApp Business API para configurar sus credenciales.",
+  "whatsapp_business_test": "Prueba de WhatsApp Business API",
+  "whatsapp_business_connected": "WhatsApp Business: Conectado",
+  "whatsapp_business_connection_failed": "WhatsApp Business: Conexión falló",
+  "test_failed": "Prueba falló: {error}",
+  "whatsapp_web_not_configured": "WhatsApp Web No Configurado",
+  "whatsapp_web_configure_first": "Por favor configure las configuraciones de WhatsApp Web primero.\n\nVaya a Herramientas → Configuraciones WhatsApp Web para reconocer los riesgos y configurar el servicio.",
+  "whatsapp_web_service_test": "Prueba del Servicio WhatsApp Web",
+  "whatsapp_web_opened_browser": "✅ {message}\n\nWhatsApp Web debería haberse abierto en su navegador.",
+  "language_changed": "Idioma Cambiado",
+  "csv_processing_errors": "Errores de Procesamiento CSV",
+  "csv_errors_found": "Se encontraron {count} errores al procesar CSV:",
+  "csv_row_error": "Fila {row}: {error}",
+  "csv_more_errors": "... y {count} errores más",
+  "no_valid_data": "Sin Datos Válidos",
+  "no_valid_records": "No se encontraron registros de clientes válidos en el archivo CSV.",
+  "csv_processing_error": "Error de Procesamiento CSV",
+  "import_error": "Error de Importación",
+  "failed_to_import_csv": "Error al importar archivo CSV:\n{error}",
+  "loaded_customers": "Cargados {count} clientes desde CSV",
+  "imported_customers": "Importados {count} clientes desde {filename}",
+  "service_error": "Error de Servicio",
+  "email_service_not_available": "El servicio de email no está disponible.",
+  "no_recipients": "Sin Destinatarios",
+  "please_select_recipients": "Por favor seleccione al menos un destinatario.",
+  "draft_failed": "Borrador Falló",
+  "failed_to_create_draft": "Error al crear borrador de email.",
+  "draft_error": "Error de Borrador",
+  "failed_to_create_draft_error": "Error al crear borrador de email:\n{error}",
+  "draft_created": "Borrador de email creado para {email}",
+  "sending_complete": "Envío Completo",
+  "sending_error": "Error de Envío",
+  "email_service_not_initialized": "El servicio de email no está inicializado.",
+  "connection_test": "Prueba de Conexión",
+  "connection_success": "Éxito: {message}\nPlataforma: {platform}",
+  "connection_failed": "Falló: {message}",
+  "outlook_connected": "Outlook: Conectado ({platform})",
+  "outlook_error": "Outlook: Error",
+  "connection_test_failed": "Prueba falló: {error}",
+  "language_restart_info": "Los cambios de idioma tomarán efecto después de reiniciar la aplicación",
+  "language_interface_info": "Todo el texto de la interfaz será traducido al idioma seleccionado",
+  "language_templates_info": "Las plantillas de mensaje predeterminadas serán actualizadas en consecuencia",
+  "language_changed_message": "El idioma ha sido cambiado a {language}.\n\nPor favor reinicie la aplicación para que los cambios tomen efecto.",
+  "language_change_failed": "Error al cambiar idioma. Por favor intente nuevamente.",
+  "language_change_error": "Ocurrió un error al cambiar idioma:\n\n{error}",
+  "reset_daily_usage": "Reiniciar Uso Diario",
+  "reset_usage_confirm": "¿Está seguro de que desea reiniciar el conteo de mensajes de hoy?\n\nEsto solo debe usarse para propósitos de prueba.",
+  "usage_reset": "Uso Reiniciado",
+  "usage_reset_success": "El uso diario ha sido reiniciado."
 }
