--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -349,5 +349,98 @@
   "relative_time_in_hours": "em {count} horas",
   "relative_time_hours_ago": "{count} horas atrás",
   "relative_time_in_days": "em {count} dias",
-  "relative_time_days_ago": "{count} dias atrás"
+  "relative_time_days_ago": "{count} dias atrás",
+
+  "_comment_missing_ui_elements": "=== TRADUÇÕES DE ELEMENTOS UI FALTANTES ===",
+  
+  "import_csv_menu": "Importar CSV...",
+  "exit": "Sair",
+  "test_outlook_connection": "Testar Conexão do Outlook",
+  "whatsapp_business_api_settings": "Configurações WhatsApp Business API...",
+  "whatsapp_web_settings": "Configurações WhatsApp Web...",
+  "test_whatsapp_business_api": "Testar WhatsApp Business API",
+  "test_whatsapp_web_service": "Testar Serviço WhatsApp Web",
+  "about": "Sobre",
+  "stop_sending": "Parar Envio",
+  "outlook_not_connected": "Outlook: Não Conectado",
+  "select_all": "Selecionar Tudo",
+  "select_none": "Não Selecionar Nada",
+  "email_content_group": "Conteúdo do Email",
+  "whatsapp_content_group": "Conteúdo WhatsApp",
+  "whatsapp_message_label": "Mensagem WhatsApp:",
+  "whatsapp_placeholder": "Digite o conteúdo da mensagem do WhatsApp (deixe vazio para usar o conteúdo do email)",
+  "characters_count": "Caracteres: {count}/4096",
+  "sending_progress": "Progresso de Envio",
+  "ready_to_send": "Pronto para enviar",
+  "email_ready_status": "Email: Pronto",
+  "whatsapp_business_not_configured_status": "WhatsApp Business: Não configurado",
+  "whatsapp_web_not_configured_status": "WhatsApp Web: Não configurado",
+  "quota_status": "Cota: {current}/{total}",
+  "invalid_csv_file": "Arquivo CSV Inválido",
+  "csv_file_not_valid": "O arquivo selecionado não é válido:",
+  "import_csv_file": "Importar Arquivo CSV",
+  "csv_files": "Arquivos CSV (*.csv)",
+  "text_files": "Arquivos de Texto (*.txt)",
+  "all_files": "Todos os Arquivos (*)",
+  "outlook_connection_error": "Erro de Conexão do Outlook",
+  "outlook_connection_failed": "Falha ao conectar com o Outlook:\n{error}\n\nPor favor certifique-se de que o Microsoft Outlook esteja instalado e tente novamente.",
+  "success": "Sucesso",
+  "error": "Erro",
+  "template_imported_successfully": "Modelo '{name}' importado com sucesso.",
+  "failed_to_import_template": "Falha ao importar modelo.",
+  "import_template": "Importar Modelo",
+  "json_files": "Arquivos JSON (*.json)",
+  "export_all_templates": "Exportar Todos os Modelos",
+  "all_templates_exported": "Todos os modelos exportados para {filename}",
+  "failed_to_export_templates": "Falha ao exportar modelos.",
+  "whatsapp_business_not_configured": "WhatsApp Business API Não Configurado",
+  "whatsapp_business_configure_first": "Por favor configure as configurações do WhatsApp Business API primeiro.\n\nVá para Ferramentas → Configurações WhatsApp Business API para configurar suas credenciais.",
+  "whatsapp_business_test": "Teste do WhatsApp Business API",
+  "whatsapp_business_connected": "WhatsApp Business: Conectado",
+  "whatsapp_business_connection_failed": "WhatsApp Business: Conexão falhou",
+  "test_failed": "Teste falhou: {error}",
+  "whatsapp_web_not_configured": "WhatsApp Web Não Configurado",
+  "whatsapp_web_configure_first": "Por favor configure as configurações do WhatsApp Web primeiro.\n\nVá para Ferramentas → Configurações WhatsApp Web para reconhecer os riscos e configurar o serviço.",
+  "whatsapp_web_service_test": "Teste do Serviço WhatsApp Web",
+  "whatsapp_web_opened_browser": "✅ {message}\n\nWhatsApp Web deveria ter aberto no seu navegador.",
+  "language_changed": "Idioma Alterado",
+  "csv_processing_errors": "Erros de Processamento CSV",
+  "csv_errors_found": "Encontrados {count} erros ao processar CSV:",
+  "csv_row_error": "Linha {row}: {error}",
+  "csv_more_errors": "... e mais {count} erros",
+  "no_valid_data": "Nenhum Dado Válido",
+  "no_valid_records": "Nenhum registro de cliente válido encontrado no arquivo CSV.",
+  "csv_processing_error": "Erro de Processamento CSV",
+  "import_error": "Erro de Importação",
+  "failed_to_import_csv": "Falha ao importar arquivo CSV:\n{error}",
+  "loaded_customers": "Carregados {count} clientes do CSV",
+  "imported_customers": "Importados {count} clientes de {filename}",
+  "service_error": "Erro de Serviço",
+  "email_service_not_available": "O serviço de email não está disponível.",
+  "no_recipients": "Nenhum Destinatário",
+  "please_select_recipients": "Por favor selecione pelo menos um destinatário.",
+  "draft_failed": "Rascunho Falhou",
+  "failed_to_create_draft": "Falha ao criar rascunho de email.",
+  "draft_error": "Erro de Rascunho",
+  "failed_to_create_draft_error": "Falha ao criar rascunho de email:\n{error}",
+  "draft_created": "Rascunho de email criado para {email}",
+  "sending_complete": "Envio Completo",
+  "sending_error": "Erro de Envio",
+  "email_service_not_initialized": "O serviço de email não está inicializado.",
+  "connection_test": "Teste de Conexão",
+  "connection_success": "Sucesso: {message}\nPlataforma: {platform}",
+  "connection_failed": "Falhou: {message}",
+  "outlook_connected": "Outlook: Conectado ({platform})",
+  "outlook_error": "Outlook: Erro",
+  "connection_test_failed": "Teste falhou: {error}",
+  "language_restart_info": "As mudanças de idioma terão efeito após reiniciar a aplicação",
+  "language_interface_info": "Todo o texto da interface será traduzido para o idioma selecionado",
+  "language_templates_info": "Os modelos de mensagem padrão serão atualizados adequadamente",
+  "language_changed_message": "O idioma foi alterado para {language}.\n\nPor favor reinicie a aplicação para que as mudanças tenham efeito.",
+  "language_change_failed": "Falha ao alterar idioma. Por favor tente novamente.",
+  "language_change_error": "Ocorreu um erro ao alterar idioma:\n\n{error}",
+  "reset_daily_usage": "Reiniciar Uso Diário",
+  "reset_usage_confirm": "Tem certeza de que deseja reiniciar a contagem de mensagens de hoje?\n\nIsto deve ser usado apenas para propósitos de teste.",
+  "usage_reset": "Uso Reiniciado",
+  "usage_reset_success": "O uso diário foi reiniciado."
 }
